implementing associations in Book.js and User.js through UserBook.js, and updating mysqldb
