# src/models/mysqldb/schemas/user.js
@@ -1,15 +1,15 @@
 const { DataTypes } = require("sequelize");
 
 const UserSchema = {
-    username: {
-        type: DataTypes.STRING,
-        allowNull: false,
-        unique: true,
-      },
-      password: {
-        type: DataTypes.STRING,
-        allowNull: false,
-      }
+  username: {
+    type: DataTypes.STRING,
+    allowNull: false,
+    unique: true,
+  },
+  password: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  }
 }
 
 module.exports = UserSchema;
